--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/783da97cd3.js" crossorigin="anonymous"></script>
     <title>CS-3743 Project</title>
 </head>
@@ -229,6 +229,6 @@
             <div class="right"></div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
