--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/783da97cd3.js" crossorigin="anonymous"></script>
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+    />
     <title>CS-3743 Project</title>
 </head>
 <body>
@@ -229,6 +234,6 @@
             <div class="right"></div>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
