Fixed issues with the header

--- a/public/insert.html
+++ b/public/insert.html
@@ -9,7 +9,7 @@
     </div>
     <div class="reply-draft">
         <div class="reply-draft-header">
-            <img class="profile-picture" src="../assets/profile_picture1.jpg" alt="Profile Picture">
+            <img class="profile-picture" src="assets/images/profile_picture1.jpg" alt="Profile Picture">
             <div class="draft-details">
                 <div class="username"> sodaseal </div>
                 <div class="timestamp"> Replying to i_hate_sodaseal </div>
@@ -31,6 +31,5 @@
             <div class="character-count">0/500</div>
         </div>
     </div>
-
 </body>
 </html>
