--- a/public/index.html
+++ b/public/index.html
@@ -247,6 +247,6 @@
             <div class="content-right"></div>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
