--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
     />
-    <title>CS-3743 Project</title>
+    <title>The Worst LAMP Twitter Clone</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="app">
