--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
     />
-    <title>The Worst LAMP Twitter Clone</title>
+    <title>A Bad LAMP Twitter Clone</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div id="app">
