--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <title>A Bad LAMP Twitter Clone</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 </head>
 <body>
     <div id="app">
