--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
     />
-    <title>A Bad LAMP Twitter Clone</title>
+    <title>A Bad Twitter Clone</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 </head>
-<body>
+<body id="main-page">
     <div id="app">
         <div id="header">
             <div class="header-left">
@@ -36,10 +36,10 @@
                         <i id="post-icon" class="fa-solid fa-pen-to-square"></i>
                         Post
                     </div>
-                    <div id="login-btn">
+                    <a href="/login.html" id="login-btn">
                         <i id="login-icon" class="fa-solid fa-user"></i>
                         Login
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
