Logo now takes you back to the index page

--- a/public/login.html
+++ b/public/login.html
@@ -17,10 +17,10 @@
     <div id="app">
         <div id="header">
             <div class="header-left">
-                <div id="logo">
+                <a href="/index.html" id="logo">
                     <i id="logo-icon" class="fa-solid fa-database"></i>
                     BadXClone
-                </div>
+                </a>
             </div>
             <div class="header-center"></div>
             <div class="header-right"></div>
