Created layout for login page (WIP)

--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,34 @@
         </div>
         <div id="main">
             <div class="content-left"></div>
-            <div class="content-center"></div>
+            <div class="content-center" id="login-center">
+                <div id="login">
+                    <div class="login-header">
+                        <div class="login-title">Login to BadXClone</div>
+                    </div>
+                    <div class="login-content">
+                        <div class="username-container">
+                            <div class="username-field">
+                                <i id="email-icon" class="fa-solid fa-at"></i>
+                                <input type="text" class="text-input" placeholder="Username / Email">
+                            </div>
+                        </div>
+                        <div class="password-container">
+                            <div class="password-field">
+                                <i id="password-icon" class="fa-solid fa-asterisk"></i>
+                                <input type="text" class="text-input" placeholder="Password">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="login-footer">
+                        <div class="forgot-password-container"></div>
+                        <div class="login-btn-container">
+                            <div class="register-btn">New User</div>
+                            <div class="login-submit-btn">Login</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="content-right"></div>
         </div>
     </div>
