--- a/public/register.html
+++ b/public/register.html
@@ -27,7 +27,10 @@
         </div>
         <div id="main">
             <div class="content-left"></div>
-            <div class="content-center"></div>
+            <div class="content-center" id="register-center">
+                <div id="register">
+                </div>
+            </div>
             <div class="content-right"></div>
         </div>
     </div>
